bindings/resvg-skia/cpp/skia_capi.hpp

struct skia_point {
    float x;
    float y;
};
// The same order as in core/SkTileMode.h
enum class TileMode {
    Clamp,
    Repeat,
    Mirror,
};
skiac_shader* skiac_shader_make_two_point_conical_gradient(
    const skia_point start_point, float start_radius,
    const skia_point end_point, float end_radius,
    const uint32_t* colors, const float* positions,
    int count, TileMode tile_mode,
    uint32_t flags, skiac_matrix *c_matrix);
skiac_shader* skiac_shader_make_from_surface_image(skiac_surface* c_surface, skiac_matrix *c_matrix);
void skiac_shader_destroy(skiac_shader* c_shader);