resvg-skia/src/ffi.rs

extern "C" {
    pub fn skiac_shader_make_two_point_conical_gradient(
        start_point: skia_point,
        start_radius: f32,
        end_point: skia_point,
        end_radius: f32,
        colors: *const u32,
        positions: *const f32,
        count: ::std::os::raw::c_int,
        tile_mode: TileMode,
        flags: u32,
        c_matrix: *mut skiac_matrix,
    ) -> *mut skiac_shader;
}
extern "C" {
    pub fn skiac_shader_make_from_surface_image(
        c_surface: *mut skiac_surface,
        c_matrix: *mut skiac_matrix,
    ) -> *mut skiac_shader;
}
extern "C" {
    pub fn skiac_shader_destroy(c_shader: *mut skiac_shader);
}
